--- a/tests/conformance/Cargo.toml
+++ b/tests/conformance/Cargo.toml
@@ -8,6 +8,7 @@ license = "Apache-2.0"
 
 [dependencies]
 anyhow = { version = "1.0", features = ["backtrace"] }
+base64 = "0.21.0"
 clap = { version = "4.0.8", features = ["derive"] }
 sigstore = { path = "../../" }
 tokio = { version = "1.17.0", features = ["rt"] }
