--- a/tests/conformance/Cargo.toml
+++ b/tests/conformance/Cargo.toml
@@ -8,6 +8,8 @@ license = "Apache-2.0"
 
 [dependencies]
 clap = { version = "4.0.8", features = ["derive"] }
+anyhow = "1.0.75"
+serde_json = "1.0.107"
 sigstore = { path = "../../" }
 
 [[bin]]
