--- a/Cargo.toml
+++ b/Cargo.toml
@@ -120,6 +120,7 @@ url = "2.2.2"
 x509-cert = { version = "0.2.2", features = ["pem", "std"] }
 crypto_secretbox = "0.1.1"
 zeroize = "1.5.7"
+rustls-pki-types = { version = "0.2.1", features = ["std"] }
 
 [dev-dependencies]
 anyhow = { version = "1.0", features = ["backtrace"] }
