--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ repository = "https://github.com/sigstore/sigstore-rs"
 
 [features]
 default = ["full-native-tls", "cached-client", "tuf", "sign", "verify"]
-wasm = ["getrandom/js"]
+wasm = ["getrandom/js", "ring/wasm32_unknown_unknown_js"]
 
 full-native-tls = [
   "fulcio-native-tls",
@@ -110,7 +110,7 @@ rsa = "0.9.2"
 scrypt = "0.11.0"
 serde = { version = "1.0.136", features = ["derive"] }
 serde_json = "1.0.79"
-serde_with = { version = "3.4.0", features = ["base64"] }
+serde_with = { version = "3.4.0", features = ["base64", "json"] }
 sha2 = { version = "0.10.6", features = ["oid"] }
 signature = { version = "2.0" }
 sigstore_protobuf_specs = "0.1.0-rc.2"
@@ -120,13 +120,15 @@ tokio-util = { version = "0.7.10", features = ["io-util"] }
 tough = { version = "0.14", features = ["http"], optional = true }
 tracing = "0.1.31"
 url = "2.2.2"
-x509-cert = { version = "0.2.2", features = ["builder", "pem", "std"] }
+x509-cert = { version = "0.2.2", features = ["builder", "pem", "std", "sct"] }
 crypto_secretbox = "0.1.1"
 zeroize = "1.5.7"
 rustls-webpki = { version = "0.102.1", features = ["alloc"] }
 serde_repr = "0.1.16"
 hex = "0.4.3"
 json-syntax = { version = "0.11.1", features = ["canonicalize", "serde"] }
+tls_codec = { version = "0.4.0", features = ["derive"] }
+ring = "0.17.6"
 
 [dev-dependencies]
 anyhow = { version = "1.0", features = ["backtrace"] }
