--- a/Cargo.toml
+++ b/Cargo.toml
@@ -120,7 +120,7 @@ tokio-util = { version = "0.7.10", features = ["io-util"] }
 tough = { version = "0.14", features = ["http"], optional = true }
 tracing = "0.1.31"
 url = "2.2.2"
-x509-cert = { version = "0.2.2", features = ["builder", "pem", "std", "sct"] }
+x509-cert = { git = "https://github.com/imor/formats", branch = "sct", features = ["builder", "pem", "std", "sct"] }
 crypto_secretbox = "0.1.1"
 zeroize = "1.5.7"
 rustls-webpki = { version = "0.102.1", features = ["alloc"] }
