--- a/Cargo.toml
+++ b/Cargo.toml
@@ -68,8 +68,6 @@ mock-client = []
 cached-client = ["cached"]
 
 [dependencies]
-ring = "0.17.7"
-ring-compat = "0.8.0"
 async-trait = "0.1.52"
 base64 = "0.21.0"
 cached = { version = "0.46.0", optional = true, features = ["async"] }
@@ -77,14 +75,27 @@ cfg-if = "1.0.0"
 chrono = { version = "0.4.27", default-features = false }
 const-oid = "0.9.1"
 digest = { version = "0.10.3", default-features = false }
+ecdsa = { version = "0.16.7", features = ["pkcs8", "digest", "der", "signing"] }
+ed25519 = { version = "2.2.1", features = ["alloc"] }
+ed25519-dalek = { version = "2.0.0-rc.2", features = ["pkcs8", "rand_core"] }
+elliptic-curve = { version = "0.13.5", features = ["arithmetic", "pem"] }
 lazy_static = "1.4.0"
 oci-distribution = { version = "0.9", default-features = false, optional = true }
 olpc-cjson = "0.1"
 openidconnect = { version = "3.0", default-features = false, features = [
   "reqwest",
 ], optional = true }
+p256 = "0.13.2"
+p384 = "0.13"
 webbrowser = "0.8.4"
 pem = "3.0"
+pkcs1 = { version = "0.7.5", features = ["std"] }
+pkcs8 = { version = "0.10.2", features = [
+  "pem",
+  "alloc",
+  "pkcs5",
+  "encryption",
+] }
 rand = { version = "0.8.5", features = ["getrandom", "std"] }
 getrandom = "0.2.8"
 regex = { version = "1.5.5", optional = true }
