--- a/Cargo.toml
+++ b/Cargo.toml
@@ -68,6 +68,7 @@ mock-client = []
 cached-client = ["cached"]
 
 [dependencies]
+ring-compat = "0.8.0"
 async-trait = "0.1.52"
 base64 = "0.21.0"
 cached = { version = "0.46.0", optional = true, features = ["async"] }
@@ -76,8 +77,6 @@ chrono = { version = "0.4.27", default-features = false }
 const-oid = "0.9.1"
 digest = { version = "0.10.3", default-features = false }
 ecdsa = { version = "0.16.7", features = ["pkcs8", "digest", "der", "signing"] }
-ed25519 = { version = "2.2.1", features = ["alloc"] }
-ed25519-dalek = { version = "2.0.0-rc.2", features = ["pkcs8", "rand_core"] }
 elliptic-curve = { version = "0.13.5", features = ["arithmetic", "pem"] }
 lazy_static = "1.4.0"
 oci-distribution = { version = "0.9", default-features = false, optional = true }
