--- a/Cargo.toml
+++ b/Cargo.toml
@@ -76,7 +76,7 @@ base64 = "0.21.0"
 cached = { version = "0.48.0", optional = true, features = ["async"] }
 cfg-if = "1.0.0"
 chrono = { version = "0.4.27", default-features = false, features = ["serde"] }
-const-oid = "0.9.1"
+const-oid = { version = "0.9.6", features = ["db"] }
 digest = { version = "0.10.3", default-features = false }
 ecdsa = { version = "0.16.7", features = ["pkcs8", "digest", "der", "signing"] }
 ed25519 = { version = "2.2.1", features = ["alloc"] }
@@ -88,7 +88,7 @@ olpc-cjson = "0.1"
 openidconnect = { version = "3.0", default-features = false, features = [
   "reqwest",
 ], optional = true }
-p256 = "0.13.2"
+p256 = "0.13"
 p384 = "0.13"
 webbrowser = "0.8.4"
 pem = { version = "3.0", features = ["serde"] }
@@ -120,7 +120,7 @@ tokio-util = { version = "0.7.10", features = ["io-util"] }
 tough = { version = "0.14", features = ["http"], optional = true }
 tracing = "0.1.31"
 url = "2.2.2"
-x509-cert = { git = "https://github.com/imor/formats", branch = "sct", features = ["builder", "pem", "std", "sct"] }
+x509-cert = { version = "0.2.5", features = ["builder", "pem", "std", "sct"] }
 crypto_secretbox = "0.1.1"
 zeroize = "1.5.7"
 rustls-webpki = { version = "0.102.1", features = ["alloc"] }
@@ -143,6 +143,8 @@ tempfile = "3.3.0"
 testcontainers = "0.15"
 tracing-subscriber = { version = "0.3.9", features = ["env-filter"] }
 
+[patch.crates-io]
+tls_codec = { git = "https://github.com/RustCrypto/formats", rev = "189b4d0d43c75b5e3ab9031ef0008c7ba9ae9378" }
 # cosign example mappings
 
 [[example]]
