--- a/Cargo.toml
+++ b/Cargo.toml
@@ -50,7 +50,7 @@ bundle = ["sign", "verify"]
 sigstore-trust-root = [
   "sigstore_protobuf_specs",
   "futures-util",
-  "tough",
+  "tuf",
   "regex",
   "tokio/sync",
 ]
@@ -134,8 +134,8 @@ signature = { version = "2.0" }
 sigstore_protobuf_specs = { version = "0.3.2", optional = true }
 thiserror = "1.0.30"
 tokio = { version = "1.17.0", features = ["rt"] }
-tokio-util = { version = "0.7.10", features = ["io-util"] }
-tough = { version = "0.17.1", features = ["http"], optional = true }
+tokio-util = { version = "0.7.10", features = ["io-util", "compat"] }
+tuf = { version = "=0.3.0-beta12", optional = true }
 tracing = "0.1.31"
 url = "2.2.2"
 x509-cert = { version = "0.2.5", features = ["builder", "pem", "std", "sct"] }
